# pathfinding_in_a_maze

./: .gitignore  CMakeLists.txt  README.md  gen_maze.py  main.cpp  makefile
assets/kernels/: step_wavefront.cl  step_wavefront_uniform.cl  step_wavefront_weights.cl
assets/shaders/: shader.frag
kernels/: step_wavefront.cl
shaders/: shader.frag  shader.vert
src/: main.cpp
src/app/: application.cpp  application.h  camera.cpp  camera.h
src/compute/: cl_context.cpp  cl_context.h  cl_program.cpp  cl_program.h
src/graphics/: buffer.cpp  buffer.h  quad.cpp  quad.h  shader.cpp  shader.h  texture.cpp  texture.h
src/maze/: maze.cpp  maze.h  pathfinding.cpp  pathfinding.h
src/platform/: platform.h
src/utils/: file_utils.cpp  file_utils.h
